# image2ascii

src/: CMakeLists.txt  bird  image2ascii  image2ascii.cpp  main.cpp
